// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render multi bash texts 1`] = `
.c0 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 8px;
  min-height: 50px;
  max-height: none;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c14 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c10:focus-visible,
.teleport-button__force-focus-visible .c10 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c10:hover,
.teleport-button__force-hover .c10 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c10:active,
.teleport-button__force-active .c10 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c12 {
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: inline-flex;
}

.c12.copied .icon-check {
  display: inline-flex;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
  background: rgba(255,255,255,0.07);
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  overflow: scroll;
}

.c7 {
  margin: 0;
}

.c9 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c7"
              >
                sudo tctl -c cfg-all users add --roles=access,editor george_washington
              </pre>
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              fill="filled"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c13 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c7"
              >
                sudo DEBUG=1 teleport start -c cfg-all -d
              </pre>
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              fill="filled"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c13 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c14"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c7"
              >
                yarn start-teleport-e --target=https://localhost:3080/web
              </pre>
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              fill="filled"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c13 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render multi bash texts with comment 1`] = `
.c0 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 8px;
  min-height: 50px;
  max-height: none;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c15 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c11:focus-visible,
.teleport-button__force-focus-visible .c11 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c11:hover,
.teleport-button__force-hover .c11 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c11:active,
.teleport-button__force-active .c11 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c7 {
  display: flex;
}

.c13 {
  display: flex;
}

.c13 .icon-check {
  display: none;
}

.c13 .icon-copy {
  display: inline-flex;
}

.c13.copied .icon-check {
  display: inline-flex;
}

.c13.copied .icon-copy {
  display: none;
}

.c5 {
  color: rgb(117 113 94 / 80%);
}

.c12 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
  background: rgba(255,255,255,0.07);
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.13);
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  overflow: scroll;
}

.c8 {
  margin: 0;
}

.c10 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Download Teleport's PGP public key
        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c8"
              >
                sudo curl https://apt.releases.teleport.dev/gpg \\
-o /usr/share/keyrings/teleport-archive-keyring.asc
              </pre>
            </div>
          </div>
          <div
            class="c9 c10"
          >
            <button
              class="c11 c12"
              fill="filled"
            >
              <div
                class="c13 icon-container"
              >
                <span
                  class="c14 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c14 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c8"
              >
                sudo DEBUG=1 teleport start -c cfg-all -d
              </pre>
            </div>
          </div>
          <div
            class="c9 c10"
          >
            <button
              class="c11 c12"
              fill="filled"
            >
              <div
                class="c13 icon-container"
              >
                <span
                  class="c14 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c14 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c15"
      >
        <div
          class="c5"
        >
          Add the Teleport APT repository for v10. You'll need to update this
file for each major release of Teleport.
Note: if using a fork of Debian or Ubuntu you may need to use '$ID_LIKE'
and the codename your distro was forked from instead of '$ID' and '$VERSION_CODENAME'.

        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c8"
              >
                echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \\
https://apt.releases.teleport.dev/stable/v10" \\
| sudo tee /etc/apt/sources.list.d/teleport.list &gt; /dev/null
              </pre>
            </div>
          </div>
          <div
            class="c9 c10"
          >
            <button
              class="c11 c12"
              fill="filled"
            >
              <div
                class="c13 icon-container"
              >
                <span
                  class="c14 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c14 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render non bash single text 1`] = `
.c0 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 8px;
  min-height: 50px;
  max-height: none;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c10:focus-visible,
.teleport-button__force-focus-visible .c10 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c10:hover,
.teleport-button__force-hover .c10 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c10:active,
.teleport-button__force-active .c10 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c12 {
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: inline-flex;
}

.c12.copied .icon-check {
  display: inline-flex;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
  background: rgba(255,255,255,0.07);
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  overflow: scroll;
}

.c7 {
  margin: 0;
}

.c9 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="text-to-copy"
            >
              <pre
                class="c7"
              >
                some -c text to be copied and it is super long to test scrolling
              </pre>
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              fill="filled"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c13 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render single bash text 1`] = `
.c0 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 8px;
  min-height: 50px;
  max-height: none;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c10:focus-visible,
.teleport-button__force-focus-visible .c10 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c10:hover,
.teleport-button__force-hover .c10 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c10:active,
.teleport-button__force-active .c10 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c12 {
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: inline-flex;
}

.c12.copied .icon-check {
  display: inline-flex;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
  background: rgba(255,255,255,0.07);
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  overflow: scroll;
}

.c7 {
  margin: 0;
}

.c9 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c7"
              >
                sudo tctl -c cfg-all users add --roles=access,editor george_washington
              </pre>
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              fill="filled"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c13 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render single bash text with comment 1`] = `
.c0 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 8px;
  min-height: 50px;
  max-height: none;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c11:focus-visible,
.teleport-button__force-focus-visible .c11 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c11:hover,
.teleport-button__force-hover .c11 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c11:active,
.teleport-button__force-active .c11 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c7 {
  display: flex;
}

.c13 {
  display: flex;
}

.c13 .icon-check {
  display: none;
}

.c13 .icon-copy {
  display: inline-flex;
}

.c13.copied .icon-check {
  display: inline-flex;
}

.c13.copied .icon-copy {
  display: none;
}

.c5 {
  color: rgb(117 113 94 / 80%);
}

.c12 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
  background: rgba(255,255,255,0.07);
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.13);
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  overflow: scroll;
}

.c8 {
  margin: 0;
}

.c10 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Add the Teleport API repository for v10. You'll need to update this.
        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              <pre
                class="c8"
              >
                sudo tctl -c cfg-all users add --roles=access,editor george_washington
              </pre>
            </div>
          </div>
          <div
            class="c9 c10"
          >
            <button
              class="c11 c12"
              fill="filled"
            >
              <div
                class="c13 icon-container"
              >
                <span
                  class="c14 icon icon-copy"
                  color="light"
                  data-testid="btn-copy"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="c14 icon icon-check"
                  color="light"
                  data-testid="btn-check"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M21.5303 6.21967C21.8232 6.51256 21.8232 6.98744 21.5303 7.28033L9.53033 19.2803C9.23744 19.5732 8.76256 19.5732 8.46967 19.2803L3.21967 14.0303C2.92678 13.7374 2.92678 13.2626 3.21967 12.9697C3.51256 12.6768 3.98744 12.6768 4.28033 12.9697L9 17.6893L20.4697 6.21967C20.7626 5.92678 21.2374 5.92678 21.5303 6.21967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
